# moderncpp-project-template

./: CMakeLists.txt
lib/: CMakeLists.txt
src/: CMakeLists.txt
